--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,24 +1,121 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title size="large">Súhrn</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+
+  <div class="event-slider title-slider">
+    <ion-slides [options]="{ slidesPerView: 'auto', zoom:false, grabCursor: true}">
+      <ion-slide>
+        <ion-col class="ion-text-left">
+          <ion-card>
+            <ion-card-header class="ion-no-padding">
+              <img src="https://i.ibb.co/t3z8cyH/logo-maturita.png" alt="logo">
+            </ion-card-header>
+
+            <ion-card-content class="farba">
+              <p class="date">1. Mája, 2022</p>
+              <h2 class="eventname">Vydanie aplikácie</h2>
+              <p class="location">
+                <ion-icon name="location"></ion-icon>
+                Michalovce, Slovensko
+              </p>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-slide>
+
+      <ion-slide>
+        <ion-col class="ion-text-left">
+          <ion-card>
+            <ion-card-header class="ion-no-padding">
+              <img src="https://i.ibb.co/t3z8cyH/logo-maturita.png" alt="logo">
+            </ion-card-header>
+
+            <ion-card-content class="farba">
+              <p class="date">1. Mája, 2022</p>
+              <h2 class="eventname">Vydanie aplikácie</h2>
+              <p class="location">
+                <ion-icon name="location"></ion-icon>
+                Michalovce, Slovensko
+              </p>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-slide>
+
+      <ion-slide>
+        <ion-col class="ion-text-left">
+          <ion-card>
+            <ion-card-header class="ion-no-padding">
+              <img src="https://i.ibb.co/t3z8cyH/logo-maturita.png" alt="logo">
+            </ion-card-header>
+
+            <ion-card-content class="farba">
+              <p class="date">1. Mája, 2022</p>
+              <h2 class="eventname">Vydanie aplikácie</h2>
+              <p class="location">
+                <ion-icon name="location"></ion-icon>
+                Michalovce, Slovensko
+              </p>
+            </ion-card-content>
+          </ion-card>
+        </ion-col>
+      </ion-slide>
+    </ion-slides>
   </div>
 
-  <p>
-    Radko, baro frajeris, kapo de la tutii
-  </p>
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col size="6">
+        <ion-card class="card-height" routerLink="/maturita-content">
+          <ion-card-content>
+            <div class="title">
+              <ion-icon name="book-outline" class="fl"></ion-icon>
+              <p>Maturitné<br> témy</p> 
+              <h2>Literatúra</h2>
+            </div>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6">
+        <ion-card class="card-height">
+          <ion-card-content>
+            <div class="title">
+              <ion-icon name="help-outline" class="fl"></ion-icon>
+              <p>Vyskúšaj<br> sa</p> 
+              <h2>Kvíz</h2>
+            </div>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6">
+        <ion-card class="card-height" routerLink="/maturita-content2">
+          <ion-card-content>
+            <div class="title">
+              <ion-icon name="book-outline" class="fl"></ion-icon>
+              <p>Maturitné<br> témy</p> 
+              <h2>Gramatika</h2>
+            </div>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size="6">
+        <ion-card class="card-height">
+          <ion-card-content>
+            <div class="title">
+              <ion-icon name="trophy-outline" class="fl"></ion-icon>
+              <p>Vyskúšaj<br> sa</p> 
+              <h2>Duel</h2>
+            </div>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
