--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,127 @@
 #container a {
   text-decoration: none;
 }
+
+ion-icon {
+  font-size: 24px;
+}
+
+ion-card-title{
+  font-size: 20px;
+}
+
+ion-card {
+  margin: 4px;
+  box-shadow: none;
+  border-radius: 16px;
+  --background: #4a7a96; /* zlta farba -> #cccc00 */
+}
+
+.card-height{
+  height: 115px;
+}
+
+h1{
+  font-size: 30px;
+  text-align: center;
+}
+
+.fl{
+  float: left;
+}
+
+.fr{
+  float: right;
+}
+
+.title {
+  ion-icon {
+      font-size: 20px;
+      color: #333;
+      background-color: #fff;
+      padding: 4px;
+      border: 1px solid white;
+      border-radius: 8px;
+      margin-right: 14px;
+      margin-top: 6px;
+  }
+
+  p {
+      font-size: 16px;
+      line-height: 20px;
+  }
+
+  h2 {
+      font-size: 18px;
+      font-weight: bold;
+      margin-top: 14px;
+  }
+}
+
+.title-slider{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 42px 8px 16px 12px;
+
+  h2{
+      margin: 0;
+      font-size: 20px;
+      font-weight: bold;
+      color: #fff;
+  }
+
+  p{
+      margin: 0;
+      font-size: 14px;
+      color: #fff;
+  }   
+}
+
+.event-slider{
+  ion-slide{
+      width: 60%;
+      margin-right: 20px;
+
+      ion-col{
+          padding-left: 0;
+
+          ion-card{
+              width: 100%;
+              border-radius: 12px;
+              box-shadow: 0px 4px 12px 2px rgba(0,0,0,0.16);
+
+              ion-card-header{
+                  img{
+                      width:100%;
+                  }
+              }
+
+              ion-card-content{
+                  padding-top: 13px;
+
+                  .date{
+                      color: #fff;
+                      font-size: 10px;
+                      margin-bottom: 5px;
+                  }
+
+                  .eventname{
+                      color: #fff;
+                      font-size: 14px;
+                      font-weight: bold;
+                      margin-bottom: 5px;
+                  }
+
+                  .location{
+                      display: flex;
+                      align-items: center;
+                      color: #fff;
+                      font-size: 10px;
+                      margin-bottom: 5px;
+                  }
+              }
+          }
+      }
+  }
+}
