--- a/src/app/maturita-content2/maturita-content2.page.html
+++ b/src/app/maturita-content2/maturita-content2.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>maturita-content2</ion-title>
+    <ion-back-button defaultHref="/home" slot="start" text=""></ion-back-button>
+    <ion-title size="large">Gramatika</ion-title>
   </ion-toolbar>
 </ion-header>
 
