upravil som modal komponent

--- a/src/app/topic-modal/topic-modal.component.html
+++ b/src/app/topic-modal/topic-modal.component.html
@@ -1,3 +1,10 @@
-<p>
-  topic-modal works!
-</p>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="dismissModal()">
+        <ion-icon name="chevron-back-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title size="large">1. maturitná téma</ion-title>
+  </ion-toolbar>
+</ion-header>
