--- a/src/global.scss
+++ b/src/global.scss
@@ -25,7 +25,7 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-@import 'swiper/css/effect-cards';
+/* @import 'swiper/css/effect-cards'; */
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
 
