--- a/src/app/topic-modal/topic-modal.component.html
+++ b/src/app/topic-modal/topic-modal.component.html
@@ -1,10 +1,13 @@
 <ion-header>
   <ion-toolbar>
+    <ion-back-button (click)="dismissModal()" slot="end" text=""></ion-back-button>
+    <!-- 
     <ion-buttons slot="start">
       <ion-button (click)="dismissModal()">
         <ion-icon name="chevron-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
     <ion-title size="large">1. maturitná téma</ion-title>
+    -->
   </ion-toolbar>
 </ion-header>
