--- a/src/app/topic-modal/topic-modal.component.scss
+++ b/src/app/topic-modal/topic-modal.component.scss
@@ -1,3 +1,56 @@
 ion-icon{
     color: white;
 }
+
+.title-slider{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 42px 8px 16px 12px;
+  
+    h2{
+        margin: 0;
+        font-size: 20px;
+        font-weight: bold;
+        color: #fff;
+    }
+  
+    p{
+        margin: 0;
+        font-size: 14px;
+        color: #fff;
+    }   
+  }
+  
+  .event-slider{
+    ion-slide{
+        width: 60%;
+        margin-right: 20px;
+        ion-col{
+            padding-left: 0;
+  
+            ion-card{
+                width: 100%;
+                border-radius: 12px;
+                box-shadow: 0px 4px 12px 2px rgba(0,0,0,0.16);
+  
+                ion-card-header{
+                    img{
+                        width:100%;
+                    }
+                }
+  
+                ion-card-content{
+                    padding-top: 13px;
+                    
+                    .eventname{
+                        color: #fff;
+                        font-size: 14px;
+                        font-weight: bold;
+                        margin-bottom: 5px;
+                    }
+                }
+            }
+        }
+    }
+}
