--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,6 +11,9 @@
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
 
+  /** white **/
+  ---ion-color-white: #ffffff;
+
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
   --ion-color-secondary-rgb: 61, 194, 255;
