--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,9 +1,37 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>register</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/login"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Registrácia</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <form [formGroup]="registerForm" (ngSubmit)="register()">
 
+    <ion-item lines="none">
+      <ion-label position="stacked">Email</ion-label>
+      <ion-input type="email" placeholder="user@gmail.com" formControlName="email"></ion-input>
+    </ion-item>
+
+    <ion-item lines="none">
+      <ion-label position="stacked">First name</ion-label>
+      <ion-input placeholder="Viktor" formControlName="first_name"></ion-input>
+    </ion-item>
+
+    <ion-item lines="none">
+      <ion-label position="stacked">Last name</ion-label>
+      <ion-input placeholder="Rohac" formControlName="last_name"></ion-input>
+    </ion-item>
+
+    <ion-item lines="none">
+      <ion-label position="stacked">Password</ion-label>
+      <ion-input type="password" placeholder="password" formControlName="password"></ion-input>
+    </ion-item>
+
+    <ion-button expand="block" type="submit" class="ion-padding-horizontal ion-margin-vertical" color="primary" [disabled]="!registerForm.valid">
+      <ion-icon name="checkmark" slot="end"></ion-icon>Register
+    </ion-button>
+  </form>
 </ion-content>
