prve zobrazenie = login page

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -26,7 +26,7 @@
  
   <div class="ion-padding-horizontal">
     <ion-button color="tertiary" expand="full" routerLink="/register">Create Account</ion-button>
-    <ion-button color="light" fill="clear" expand="full" (click)="openReset()">Reset Password</ion-button>
+    <ion-button color="warning" expand="full" (click)="openReset()">Reset Password</ion-button>
   </div>
  
 </ion-content>
