--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -11,9 +11,6 @@
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
 
-  /** white **/
-  ---ion-color-white: #ffffff;
-
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
   --ion-color-secondary-rgb: 61, 194, 255;
@@ -54,14 +51,6 @@
   --ion-color-danger-shade: #cf3c4f;
   --ion-color-danger-tint: #ed576b;
 
-  /** dark **/
-  --ion-color-dark: #222428;
-  --ion-color-dark-rgb: 34, 36, 40;
-  --ion-color-dark-contrast: #ffffff;
-  --ion-color-dark-contrast-rgb: 255, 255, 255;
-  --ion-color-dark-shade: #1e2023;
-  --ion-color-dark-tint: #383a3e;
-
   /** medium **/
   --ion-color-medium: #92949c;
   --ion-color-medium-rgb: 146, 148, 156;
@@ -70,252 +59,131 @@
   --ion-color-medium-shade: #808289;
   --ion-color-medium-tint: #9d9fa6;
 
-  /** light **/
+  /** light - light background**/
   --ion-color-light: #f4f5f8;
   --ion-color-light-rgb: 244, 245, 248;
   --ion-color-light-contrast: #000000;
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+}
 
-  /*our main - background*/
-  --ion-color-background: #292831;
-  --ion-color-background-rgb: 41,40,49;
-  --ion-color-background-contrast: #ffffff;
-  --ion-color-background-contrast-rgb: 255,255,255;
-  --ion-color-background-shade: #24232b;
-  --ion-color-background-tint: #3e3e46;
+/* ios */
+.ios body[color-theme = "light"] {
+  --ion-background-color: var(--ion-color-light);
+  --ion-item-background: var(--ion-color-light);
+  --ion-card-background: #1c1c1d;
   
-  /*our main - dark blue*/
-  --ion-color-darkblue: #333f58;
-  --ion-color-darkblue-rgb: 51,63,88;
-  --ion-color-darkblue-contrast: #ffffff;
-  --ion-color-darkblue-contrast-rgb: 255,255,255;
-  --ion-color-darkblue-shade: #2d374d;
-  --ion-color-darkblue-tint: #475269;
+  --ion-text-color: var(--ion-color-light-contrast);
+
+}
+
+.ios ion-modal[color-theme = "light"] {
+  --ion-background-color: var(--ion-color-step-100);
+  --ion-toolbar-background: var(--ion-color-step-150);
+  --ion-toolbar-border-color: var(--ion-color-step-250);
+}
+
+/* android */
+.md body[color-theme = "light"] {
+  --ion-background-color: var(--ion-color-light);
+  --ion-item-background: var(--ion-color-light);
+  --ion-card-background: #1c1c1d;
+  --ion-toolbar-background: #1f1f1f;
+  --ion-tab-bar-background: #1f1f1f;
+
+  --ion-text-color: var(--ion-color-light-contrast);
+
+  --ion-border-color: #222222;
+}
+
+
+/* dark */
+body[color-theme = "dark"] {
+  --ion-color-primary: #4a7a96;
+	--ion-color-primary-rgb: 74,122,150;
+	--ion-color-primary-contrast: #ffffff;
+	--ion-color-primary-contrast-rgb: 255,255,255;
+	--ion-color-primary-shade: #416b84;
+	--ion-color-primary-tint: #5c87a1;
+
+  /** secondary - dark background **/
+	--ion-color-secondary: #333f58;
+	--ion-color-secondary-rgb: 51,63,88;
+	--ion-color-secondary-contrast: #ffffff;
+	--ion-color-secondary-contrast-rgb: 255,255,255;
+	--ion-color-secondary-shade: #2d374d;
+	--ion-color-secondary-tint: #475269;
+
+	--ion-color-tertiary: #ee8695;
+	--ion-color-tertiary-rgb: 238,134,149;
+	--ion-color-tertiary-contrast: #000000;
+	--ion-color-tertiary-contrast-rgb: 0,0,0;
+	--ion-color-tertiary-shade: #d17683;
+	--ion-color-tertiary-tint: #f092a0;
+
+	--ion-color-success: #fbbbad;
+	--ion-color-success-rgb: 251,187,173;
+	--ion-color-success-contrast: #000000;
+	--ion-color-success-contrast-rgb: 0,0,0;
+	--ion-color-success-shade: #dda598;
+	--ion-color-success-tint: #fbc2b5;
+
+	--ion-color-warning: #ca2b2b;
+	--ion-color-warning-rgb: 202,43,43;
+	--ion-color-warning-contrast: #ffffff;
+	--ion-color-warning-contrast-rgb: 255,255,255;
+	--ion-color-warning-shade: #b22626;
+	--ion-color-warning-tint: #cf4040;
+
+	--ion-color-danger: #292831;
+	--ion-color-danger-rgb: 41,40,49;
+	--ion-color-danger-contrast: #ffffff;
+	--ion-color-danger-contrast-rgb: 255,255,255;
+	--ion-color-danger-shade: #24232b;
+	--ion-color-danger-tint: #3e3e46;
+
+	--ion-color-medium: #92949c;
+	--ion-color-medium-rgb: 146,148,156;
+	--ion-color-medium-contrast: #000000;
+	--ion-color-medium-contrast-rgb: 0,0,0;
+	--ion-color-medium-shade: #808289;
+	--ion-color-medium-tint: #9d9fa6;
+
+	--ion-color-light: #fefffe;
+	--ion-color-light-rgb: 254,255,254;
+	--ion-color-light-contrast: #000000;
+	--ion-color-light-contrast-rgb: 0,0,0;
+	--ion-color-light-shade: #e0e0e0;
+	--ion-color-light-tint: #fefffe;
+}
+
+/* ios */
+.ios body[color-theme = "dark"] {
+  --ion-background-color: var(--ion-color-secondary);
+  --ion-item-background: var(--ion-color-secondary);
+  --ion-card-background: #1c1c1d;
   
-  /*our main - light blue*/
-  --ion-color-lightblue: #4a7a96;
-	--ion-color-lightblue-rgb: 74,122,150;
-	--ion-color-lightblue-contrast: #ffffff;
-	--ion-color-lightblue-contrast-rgb: 255,255,255;
-	--ion-color-lightblue-shade: #416b84;
-	--ion-color-lightblue-tint: #5c87a1;
+  --ion-text-color: var(--ion-color-light);
 
-  /*our main - pink*/
-  --ion-color-pink: #ee8695;
-	--ion-color-pink-rgb: 238,134,149;
-	--ion-color-pink-contrast: #000000;
-	--ion-color-pink-contrast-rgb: 0,0,0;
-	--ion-color-pink-shade: #d17683;
-	--ion-color-pink-tint: #f092a0;
-
-  /*our main - piggypink*/
-  --ion-color-piggypink: #fbbbad;
-	--ion-color-piggypink-rgb: 251,187,173;
-	--ion-color-piggypink-contrast: #000000;
-	--ion-color-piggypink-contrast-rgb: 0,0,0;
-	--ion-color-piggypink-shade: #dda598;
-	--ion-color-piggypink-tint: #fbc2b5;
 }
-/* ---our--- */
-.ion-color-piggypink {
-	--ion-color-base: var(--ion-color-piggypink);
-	--ion-color-base-rgb: var(--ion-color-piggypink-rgb);
-	--ion-color-contrast: var(--ion-color-piggypink-contrast);
-	--ion-color-contrast-rgb: var(--ion-color-piggypink-contrast-rgb);
-	--ion-color-shade: var(--ion-color-piggypink-shade);
-	--ion-color-tint: var(--ion-color-piggypink-tint);
+
+.ios ion-modal[color-theme = "dark"] {
+  --ion-background-color: var(--ion-color-step-100);
+  --ion-toolbar-background: var(--ion-color-step-150);
+  --ion-toolbar-border-color: var(--ion-color-step-250);
 }
-.ion-color-pink {
-	--ion-color-base: var(--ion-color-pink);
-	--ion-color-base-rgb: var(--ion-color-pink-rgb);
-	--ion-color-contrast: var(--ion-color-pink-contrast);
-	--ion-color-contrast-rgb: var(--ion-color-pink-contrast-rgb);
-	--ion-color-shade: var(--ion-color-pink-shade);
-	--ion-color-tint: var(--ion-color-pink-tint);
+
+/* android */
+.md body[color-theme = "dark"] {
+  --ion-background-color: var(--ion-color-secondary);
+  --ion-item-background: var(--ion-color-secondary);
+  --ion-card-background: #1c1c1d;
+  --ion-toolbar-background: #1f1f1f;
+  --ion-tab-bar-background: #1f1f1f;
+
+  --ion-text-color: var(--ion-color-secondary-contrast);
+
+  --ion-border-color: #222222;
 }
-.ion-color-lightblue {
-	--ion-color-base: var(--ion-color-lightblue);
-	--ion-color-base-rgb: var(--ion-color-lightblue-rgb);
-	--ion-color-contrast: var(--ion-color-lightblue-contrast);
-	--ion-color-contrast-rgb: var(--ion-color-lightblue-contrast-rgb);
-	--ion-color-shade: var(--ion-color-lightblue-shade);
-	--ion-color-tint: var(--ion-color-lightblue-tint);
-}
-.ion-color-darkblue {
-    --ion-color-base: var(--ion-color-darkblue);
-    --ion-color-base-rgb: var(--ion-color-darkblue-rgb);
-    --ion-color-contrast: var(--ion-color-darkblue-contrast);
-    --ion-color-contrast-rgb: var(--ion-color-darkblue-contrast-rgb);
-    --ion-color-shade: var(--ion-color-darkblue-shade);
-    --ion-color-tint: var(--ion-color-darkblue-tint);
-}
-.ion-color-background {
-    --ion-color-base: var(--ion-color-background);
-    --ion-color-base-rgb: var(--ion-color-background-rgb);
-    --ion-color-contrast: var(--ion-color-background-contrast);
-    --ion-color-contrast-rgb: var(--ion-color-background-contrast-rgb);
-    --ion-color-shade: var(--ion-color-background-shade);
-    --ion-color-tint: var(--ion-color-background-tint);
-}
-/* ---our--- */
 
-@media (prefers-color-scheme: dark) {
-  /*
-   * Dark Colors
-   * -------------------------------------------
-   */
-
-  body {
-    --ion-color-primary: #428cff;
-    --ion-color-primary-rgb: 66,140,255;
-    --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
-
-    --ion-color-secondary: #50c8ff;
-    --ion-color-secondary-rgb: 80,200,255;
-    --ion-color-secondary-contrast: #ffffff;
-    --ion-color-secondary-contrast-rgb: 255,255,255;
-    --ion-color-secondary-shade: #46b0e0;
-    --ion-color-secondary-tint: #62ceff;
-
-    --ion-color-tertiary: #6a64ff;
-    --ion-color-tertiary-rgb: 106,100,255;
-    --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: 255,255,255;
-    --ion-color-tertiary-shade: #5d58e0;
-    --ion-color-tertiary-tint: #7974ff;
-
-    --ion-color-success: #2fdf75;
-    --ion-color-success-rgb: 47,223,117;
-    --ion-color-success-contrast: #000000;
-    --ion-color-success-contrast-rgb: 0,0,0;
-    --ion-color-success-shade: #29c467;
-    --ion-color-success-tint: #44e283;
-
-    --ion-color-warning: #ffd534;
-    --ion-color-warning-rgb: 255,213,52;
-    --ion-color-warning-contrast: #000000;
-    --ion-color-warning-contrast-rgb: 0,0,0;
-    --ion-color-warning-shade: #e0bb2e;
-    --ion-color-warning-tint: #ffd948;
-
-    --ion-color-danger: #ff4961;
-    --ion-color-danger-rgb: 255,73,97;
-    --ion-color-danger-contrast: #ffffff;
-    --ion-color-danger-contrast-rgb: 255,255,255;
-    --ion-color-danger-shade: #e04055;
-    --ion-color-danger-tint: #ff5b71;
-
-    --ion-color-dark: #f4f5f8;
-    --ion-color-dark-rgb: 244,245,248;
-    --ion-color-dark-contrast: #000000;
-    --ion-color-dark-contrast-rgb: 0,0,0;
-    --ion-color-dark-shade: #d7d8da;
-    --ion-color-dark-tint: #f5f6f9;
-
-    --ion-color-medium: #989aa2;
-    --ion-color-medium-rgb: 152,154,162;
-    --ion-color-medium-contrast: #000000;
-    --ion-color-medium-contrast-rgb: 0,0,0;
-    --ion-color-medium-shade: #86888f;
-    --ion-color-medium-tint: #a2a4ab;
-
-    --ion-color-light: #222428;
-    --ion-color-light-rgb: 34,36,40;
-    --ion-color-light-contrast: #ffffff;
-    --ion-color-light-contrast-rgb: 255,255,255;
-    --ion-color-light-shade: #1e2023;
-    --ion-color-light-tint: #383a3e;
-  }
-
-  /*
-   * iOS Dark Theme
-   * -------------------------------------------
-   */
-
-  .ios body {
-    --ion-background-color: #000000;
-    --ion-background-color-rgb: 0,0,0;
-
-    --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
-
-    --ion-color-step-50: #0d0d0d;
-    --ion-color-step-100: #1a1a1a;
-    --ion-color-step-150: #262626;
-    --ion-color-step-200: #333333;
-    --ion-color-step-250: #404040;
-    --ion-color-step-300: #4d4d4d;
-    --ion-color-step-350: #595959;
-    --ion-color-step-400: #666666;
-    --ion-color-step-450: #737373;
-    --ion-color-step-500: #808080;
-    --ion-color-step-550: #8c8c8c;
-    --ion-color-step-600: #999999;
-    --ion-color-step-650: #a6a6a6;
-    --ion-color-step-700: #b3b3b3;
-    --ion-color-step-750: #bfbfbf;
-    --ion-color-step-800: #cccccc;
-    --ion-color-step-850: #d9d9d9;
-    --ion-color-step-900: #e6e6e6;
-    --ion-color-step-950: #f2f2f2;
-
-    --ion-item-background: #000000;
-
-    --ion-card-background: #1c1c1d;
-  }
-
-  .ios ion-modal {
-    --ion-background-color: var(--ion-color-step-100);
-    --ion-toolbar-background: var(--ion-color-step-150);
-    --ion-toolbar-border-color: var(--ion-color-step-250);
-  }
-
-
-  /*
-   * Material Design Dark Theme
-   * -------------------------------------------
-   */
-
-  .md body {
-    --ion-background-color: #121212;
-    --ion-background-color-rgb: 18,18,18;
-
-    --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
-
-    --ion-border-color: #222222;
-
-    --ion-color-step-50: #1e1e1e;
-    --ion-color-step-100: #2a2a2a;
-    --ion-color-step-150: #363636;
-    --ion-color-step-200: #414141;
-    --ion-color-step-250: #4d4d4d;
-    --ion-color-step-300: #595959;
-    --ion-color-step-350: #656565;
-    --ion-color-step-400: #717171;
-    --ion-color-step-450: #7d7d7d;
-    --ion-color-step-500: #898989;
-    --ion-color-step-550: #949494;
-    --ion-color-step-600: #a0a0a0;
-    --ion-color-step-650: #acacac;
-    --ion-color-step-700: #b8b8b8;
-    --ion-color-step-750: #c4c4c4;
-    --ion-color-step-800: #d0d0d0;
-    --ion-color-step-850: #dbdbdb;
-    --ion-color-step-900: #e7e7e7;
-    --ion-color-step-950: #f3f3f3;
-
-    --ion-item-background: #1e1e1e;
-
-    --ion-toolbar-background: #1f1f1f;
-
-    --ion-tab-bar-background: #1f1f1f;
-
-    --ion-card-background: #1e1e1e;
-  }
-}
