--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -99,7 +99,7 @@
 
 
 /* dark */
-body[color-theme = "dark"] {
+body.dark {
   --ion-color-primary: #4a7a96;
 	--ion-color-primary-rgb: 74,122,150;
 	--ion-color-primary-contrast: #ffffff;
@@ -159,7 +159,7 @@ body[color-theme = "dark"] {
 }
 
 /* ios */
-.ios body[color-theme = "dark"] {
+.ios body.dark {
   --ion-background-color: var(--ion-color-secondary);
   --ion-item-background: var(--ion-color-secondary);
   --ion-card-background: #1c1c1d;
@@ -168,14 +168,14 @@ body[color-theme = "dark"] {
 
 }
 
-.ios ion-modal[color-theme = "dark"] {
+.ios ion-modal.dark {
   --ion-background-color: var(--ion-color-step-100);
   --ion-toolbar-background: var(--ion-color-step-150);
   --ion-toolbar-border-color: var(--ion-color-step-250);
 }
 
 /* android */
-.md body[color-theme = "dark"] {
+.md body.dark {
   --ion-background-color: var(--ion-color-secondary);
   --ion-item-background: var(--ion-color-secondary);
   --ion-card-background: #1c1c1d;
